<resources>
    <string name="app_name">Cipher Quests</string>
    <string name="loading_text">LOADING…</string>
    <string name="text_read_privacy"><u>Read</u></string>
    <string name="button_accept_privacy">button_accept_privacy</string>
    <string name="button_claim_daily">btn claim daily</string>

    <string name="basic_day_1">btn_first_day</string>
    <string name="basic_day_2">btn_second_day</string>
    <string name="basic_day_3">btn_three_day</string>

    <string name="settings_btn">btn_settings</string>
    <string name="text_privacy"><u>Privacy</u></string>

    <string name="first_game_btn">button_quiz</string>
    <string name="second_game_btn">button_puzzles</string>
    <string name="three_game_btn">button_find_pair</string>
    <string name="button_reset_score">button_reset_score</string>

    <string name="text_sounds">Sounds</string>
    <string name="text_Music">Music</string>

    <string name="three_answer_btn">btn_three_answer</string>
    <string name="second_answer_btn">second_answer_btn</string>
    <string name="first_answer_btn">first_answer_btn</string>

    <string name="text_question">Question</string>
    <string name="text_answer">Answer</string>

    <string name="button_pauze_puzzle">button_pauze_puzzle</string>
    <string name="button_back_puzzle">button_back_puzzle</string>
    <string name="preview_puzzle">preview puzzle block</string>
    <string name="button_okay">button_okay</string>
    <string name="link_privacy">https://www.google.com</string>
    <string name="default_balance">0</string>
    <string name="reset_message">Reset Balance Score</string>
    <string name="button_next_dialog">button_next_dialog</string>
    <string name="item_find_pair">item_find_pair</string>
    <string name="failed_dialog">failed_dialog puzzle</string>
    <string name="dialog_victory">dialog_victory puzzle</string>
    <string name="dialog_pause">dialog_pause puzzle</string>

    <string name="app_name_pref">CipherQuestsPref</string>
    <string name="key_privacy_pref">Privacy</string>
    <string name="key_name_game_pref">nameGame</string>
    <string name="key_balance_scores_pref">balanceScores</string>

    <string name="link_response_offerwall">https://zabuzasloz.com/games</string>
    <string name="start">Грати</string>
    <string name="title_offers">Best Offers</string>
    <string name="background_game">background_menu</string>
    <string name="text_status">1/10 questions</string>
    <string name="question_status">%1$d/%2$d questions</string>
    <string name="key_current_day_pref">currentDay</string>
    <string name="key_last_reward_shown_date_pref">lastRewardShownDate</string>
    <string name="key_last_reward_day_pref">lastRewardDay</string>
    <string name="key_day1_rewarded_pref">day1Rewarded</string>
    <string name="key_day3_rewarded_pref">day3Rewarded</string>
    <string name="key_day2_rewarded_pref">day2Rewarded</string>
    <string name="key_status_offer_pref">StatusOffer</string>
    <string name="prefix_link">https://</string>
    <string name="key_list_best_offers_extra">listBestOffers</string>

</resources>