<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_games_fragments.xml"
    app:startDestination="@id/quiz_game">

    <fragment
        android:id="@+id/quiz_game"
        android:name="com.ciphero.questa.ui.games.quiz.QuizGameFragment"
        android:label="@string/first_game_btn"
        tools:layout="@layout/fragment_quiz_game" />

    <fragment
        android:id="@+id/puzzle_game"
        android:name="com.ciphero.questa.ui.games.puzzle.PuzzleGameFragment"
        android:label="@string/three_game_btn"
        tools:layout="@layout/fragment_puzzle_game" />

    <fragment
        android:id="@+id/find_pair_game"
        android:name="com.ciphero.questa.ui.games.findpair.FindPairGameFragment"
        android:label="@string/second_game_btn"
        tools:layout="@layout/fragment_find_pair_game" />

</navigation>