<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_daily"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_daily"
    tools:context=".ui.daily.DailyRewardActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/list_buttons_daily"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="100dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/button_claim_daily"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btn_first_day"
            android:layout_width="190dp"
            android:layout_height="250dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/basic_day_1"
            android:clickable="true"
            android:contentDescription="@string/basic_day_1"
            android:focusable="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/btn_second_day"
            android:layout_width="190dp"
            android:layout_height="250dp"
            android:layout_marginEnd="5dp"
            android:alpha="0.5"
            android:background="@drawable/basic_day_2"
            android:clickable="true"
            android:contentDescription="@string/basic_day_2"
            android:enabled="false"
            android:focusable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btn_first_day" />

        <ImageView
            android:id="@+id/btn_three_day"
            android:layout_width="190dp"
            android:layout_height="250dp"
            android:alpha="0.5"
            android:background="@drawable/basic_day_3"
            android:clickable="true"
            android:contentDescription="@string/basic_day_3"
            android:enabled="false"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_second_day" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/button_claim_daily"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:background="@drawable/button_claim"
        android:clickable="true"
        android:contentDescription="@string/button_claim_daily"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>